Fixes to unit test ant task / updates unit test props Removed obsolete CslJar stuff